Test auth service unit test 작성

--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "roots": [
       "src"
     ],
-    "testRegex": ".specs.ts$",
+    "testRegex": "service.spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
