--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
     "start:prod": "pm2 start dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -25,61 +24,64 @@
     "make:rollback": "ts-node -P tsconfig.json ./node_modules/typeorm/cli.js migration:revert"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.216.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/jwt": "^9.0.0",
-    "@nestjs/mapped-types": "^1.2.0",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/swagger": "^6.1.3",
-    "@nestjs/typeorm": "^9.0.1",
-    "@types/bcrypt": "^5.0.0",
-    "@types/passport-jwt": "^3.0.7",
-    "@types/passport-local": "^1.0.34",
-    "aws-sdk": "^2.1259.0",
-    "bcrypt": "^5.1.0",
+    "@aws-sdk/client-s3": "^3.536.0",
+    "@nestjs/common": "^10.3.4",
+    "@nestjs/config": "^3.2.0",
+    "@nestjs/core": "^10.3.4",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "^2.0.5",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.3.4",
+    "@nestjs/platform-socket.io": "^10.3.4",
+    "@nestjs/swagger": "^7.3.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.3.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
+    "aws-sdk": "^2.1580.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.8.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "swagger-ui-express": "^4.6.0",
-    "typeorm": "^0.3.10"
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.2.1",
+    "rimraf": "^5.0.5",
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5",
+    "swagger-ui-express": "^5.0.0",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.2.1",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.8",
-    "@types/multer": "^1.4.7",
-    "@types/multer-s3": "^3.0.0",
-    "@types/node": "^16.18.3",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "dotenv": "^16.0.2",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.3",
-    "pm2": "^5.2.2",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.8",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "@nestjs/cli": "^10.3.2",
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.4",
+    "@types/express": "^4.17.21",
+    "@types/jest": "29.5.12",
+    "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.3",
+    "@types/node": "^20.11.29",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "29.7.0",
+    "pm2": "^5.3.1",
+    "prettier": "^3.2.5",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.4",
+    "ts-jest": "29.1.2",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.4.2"
   },
   "jest": {
     "moduleDirectories": [
